# Monad

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  config.py  main.py  main_feishu.py  pyproject.toml  requirements.txt
cognition/: reasoner.py
core/: llm.py  loop.py
execution/: executor.py
interface/: output.py
knowledge/: vault.py
knowledge/axioms/: rationality.md
knowledge/environment/: internet.md
knowledge/experiences/: 2026_03_06_185212_杭州今天天气咋样.md
knowledge/protocols/: missing_dependency.md  no_network.md
knowledge/tools/: python_exec.md
knowledge/user/: facts.md  goals.md  mood.md
learning/: reflection.py  skill_builder.py
monad/: config.py  main.py  types.py
monad/cognition/: hints.py  parser.py  planning.py  prompts.py  reasoner.py
monad/core/: llm.py  loop.py
monad/execution/: context.py  executor.py
monad/interface/: feishu.py  output.py  voice_input.py  web.py
monad/knowledge/: schedule.py  vault.py
monad/learning/: curiosity.py  personalization.py  reflection.py  self_eval.py  skill_builder.py
monad/proactive/: __init__.py  _feishu_bridge.py  jobs.py  notify.py  (+1 more)
tests/: conftest.py  test_ask_user.py  test_config.py  test_context.py  test_desktop_control.py  test_executor.py  test_llm.py  test_loop.py  test_output.py  test_personalization.py  test_planning.py  test_python_exec.py  test_reasoner.py  test_record_screen.py  test_recording_skills.py  test_reflection.py  test_schedule.py  test_shell.py  test_skill_builder.py  test_vault.py  test_web.py  test_web_fetch.py
tools/: shell.py
(+46 files in other folders)
